NAS-140653: Fix root cause of word-break in mat-list-item spans and apply HTML fix consistently
(cherry picked from commit 887484d7c4c8dcbef35854f7d608337950dce209)

--- a/src/app/modules/layout/navigation/navigation.component.scss
+++ b/src/app/modules/layout/navigation/navigation.component.scss
@@ -65,9 +65,6 @@
 
   .menu-text {
     flex: 1;
-    min-width: 0;
-    word-break: normal;
-    overflow-wrap: normal;
   }
 
   mat-list-item a {
